# ai-cv-qwen-quotation-generation-sincro

./: .gitignore  README.md  pyproject.toml
notebooks/: qwen2_5VL.ipynb  qwen2_5VL.py
src/: main.py
src/data_ingestion/: excel_loader.py  pdf_extractor.py  qwen_extractor.py
src/knowledge_base/: builder.py
test/: test_extract_sections.py  testgpu.py
